--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
     <!-------------------------------------------->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/b36d3b3870.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -48,7 +53,13 @@
     <nav id="navbarPlaceholder"></nav>
 
     <!-- the body of your page goes here -->
-    <!-- stuff -->
+    <div class="container text-center py-4">
+        <div class="rounded-circle overflow-hidden">
+            <img class="responsive" src="./images/elmo.jpg" alt="">
+        </div>
+        <h1>Welcome to HoCa's Hiking App</h1>
+        <a href="login.html" class="btn btn-primary" role="button">Log in</a>
+    </div>
 
     <!-- our own footer goes here-->
     <nav id="footerPlaceholder"></nav>
@@ -58,7 +69,10 @@
     <!---------------------------------------------->
     <script src="./scripts/firebaseAPI_TEAM99.js"></script>
     <script src="./scripts/skeleton.js"></script>
-    <!-- <script src="./scripts/script.js"></script> -->
+    <script src="./scripts/script.js"></script>
+    <script>
+        logout();       //make sure user is logged out
+    </script>
 
 </body>
 
