--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
     <!-- the body of your page goes here -->
     <div class="container text-center py-4">
         <div class="rounded-circle overflow-hidden">
-            <img class="responsive" src="./images/elmo.jpg" alt="">
+            <img class="responsive" src="./images/AM01.jpg" alt="">
         </div>
-        <h1>Welcome to HoCa's Hiking App</h1>
+        <h1>Welcome to <i class="fa-solid fa-person-hiking">HIPPOHIKE</i></h1>
         <a href="login.html" class="btn btn-primary" role="button">Log in</a>
     </div>
 
